--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,13 +2,19 @@
   padding: 0 2rem;
 }
 
+.content {
+  justify-content: center;
+  padding-top: 5rem;
+}
+
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
